Add classes to input elements in css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1>What's for dinner?</h1>
-    <div>
-      <div>
+    <div class="inputsection">
+      <div class="inputs">
         <input placeholder="Type in your options.."></input>
       </div>
-      <button>Add</button>
+      <button class="add">Add</button>
     </div>
     <button>Go!</button>
   </body>
